# KanjiLab

./: .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  README.md  dprint.json  eslint.config.mjs  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
dbscripts/: loadData.py  loadData2.py  parseFurigana.py  pyproject.toml  wordsWithoutFurigana.sql
kanji_lab_loader/: loadData.py  pyproject.toml
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/kanjilab_macros/: Cargo.toml
src-tauri/kanjilab_macros/src/: lib.rs
src-tauri/kanjilab_server/: Cargo.toml
src-tauri/kanjilab_server/src/: lib.rs  main.rs  server.rs  server_logic.rs  structures.rs  tests.rs  tools.rs
src-tauri/migrations/: 0001_start.sql
src-tauri/migrations/dict/: 0001_start.sql
src-tauri/migrations/main/: 0001_start.sql  0002_added_fsrs.sql
src-tauri/queries/: add_answer_stats.sql  add_game_stats.sql  delete_dictionary.sql  get_all_answer_stats.sql  get_all_dictionaries.sql  get_all_game_stats.sql  get_all_games_stats.sql  get_all_users.sql  get_answer_stats_by_game.sql  get_answer_streaks.sql  get_card_fsrs.sql  get_game_stats.sql  get_or_create_user.sql  get_overall_stats.sql  get_stats.sql  get_userdata_by_id.sql  get_userdata_by_key.sql  get_username_by_id.sql  get_word_part_readings.sql  get_word_parts.sql  get_word_parts_examples.sql  get_words.sql  get_words_count.sql  get_words_with_parts.sql  import_dictionary.sql  upsert_card_fsrs.sql
src-tauri/src/: crypto.rs  db.rs  fonts.rs  lib.rs  main.rs  server.rs  server_logic.rs  structures.rs  tests.rs  tools.rs
src-tauri/src/queries/: add_answer_result.sql  add_answer_stats.sql  get_answer_streaks.sql  get_or_create_font.sql  get_stats.sql  get_word_parts_examples.sql  get_words.sql  get_words_with_parts.sql
src/lib/: FontLoader.ts  FontTools.ts  charts.ts  cryptoTools.ts  databaseService.ts  databaseTools.ts  fontTools.ts  globalSettings.svelte.ts  networkTools.ts  tauriFunctions.ts  types.ts  webSocketClient.svelte.ts  webSocketClient.ts  webSocketConnector.ts
src/lib/components/: AnswerCard.svelte  AutoComplete.svelte  Avatar.svelte  DictionariesScreen.svelte  DictionariesScreenMini.svelte  FontCard.svelte  FontsScreen.svelte  FrequencyHeatmap.svelte  GameScreen.svelte  GameSettings.svelte  GameStats.svelte  GameStatsTable.svelte  GamesTable.svelte  Heatmap.svelte  LegacyGameScreen.svelte  MedalStats.svelte  MessageCard.svelte  PlayerListCard.svelte  SVGIcon.svelte  SettingsScreen.svelte  StartGameScreen.svelte  StatsScreen.svelte  ThemeSelect.svelte
src/routes/: +page.svelte
