[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
kanjilab_server = { path = "./kanjilab_server" }
tauri = { version = "2.0.0-rc.0", features = ["protocol-asset"] }
tauri-plugin-fs = "2.0.0-rc.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
text-svg = "0.1.2"
rusttype = "0.9.3"
svg = "0.12.1"
rand = "0.8.5"
ttf-parser = "0.24.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "macros" ] }
tokio = { version = "1.0", features = ["full"] }

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0-rc.0"
