[package]
name = "app"
version = "0.1.0"
authors = ["you"]
edition = "2024"
license = ""
repository = ""
description = "A Tauri App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
kanjilab_server = { path = "./kanjilab_server" }
rand = "0.8.5"
rusttype = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "sqlite", "migrate", "chrono"] }
svg = "0.12.1"
tauri = { version = "2.0.0-rc.0", features = ["protocol-asset"] }
tauri-plugin-fs = "2.0.0-rc.0"
tokio = { version = "1.0", features = ["full"] }
ttf-parser = "0.24.1"
usvg = "0.43.0"
indexmap = "2.7.0"
