[package]
name = "kanjilab_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "kanjilab_server"
path = "src/lib.rs"

[[bin]]
name = "kanjilab_server"
path = "src/main.rs"

[dependencies]
kanjilab_macros = { path = "./kanjilab_macros" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.17"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
colored = "2"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]